# zero-trust-ai-access

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  database.py  gateway.py  main.py  redis_client.py
app/models/: __init__.py  audit.py  requests.py  responses.py  user.py
app/routers/: __init__.py  admin.py  audit.py  policies.py
app/security/: __init__.py  pii_detector.py  policy_engine.py  prompt_injection_detector.py
assets/screenshots/: README.md
docs/: ARCHITECTURE.md
docs/mockups/: auth-flow.md  dashboard-main.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
monitoring/: prometheus.yml
src/: main.py
src/zero_trust/: __init__.py  auth.py  authorizer.py
tests/: __init__.py  test_auth.py  test_policy_engine.py  test_security.py
